Fixed bug for linking files together

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<link rel="stylesheet" src="gitChallenge.css">
+		<link rel="stylesheet" type="text/css" href="gitChallenge.css">
 		<script src="gitChallenge.js"></script>
 	<head>
 
